--- a/ShiftCaptain/Views/Shift/Index.cshtml
+++ b/ShiftCaptain/Views/Shift/Index.cshtml
@@ -49,5 +49,8 @@
     </div>
 </section>
 @Scripts.Render("~/Scripts/jquery-1.7.1.min.js")
+@Scripts.Render("~/Scripts/Shift/CRUD.js")
+@Scripts.Render("~/Scripts/Room/CRUD.js")
+@Scripts.Render("~/Scripts/User/CRUD.js")
 @Scripts.Render("~/Scripts/DragNDrop/drag-n-drop.js")
 @Scripts.Render("~/Scripts/Shift.js")
