added _layout for navigation purposes

--- a/ShiftCaptain/Content/scss/app.scss
+++ b/ShiftCaptain/Content/scss/app.scss
@@ -43,4 +43,5 @@ $table-head-font-size: rem-calc(18);
 @import "foundation/components/visibility";
 
 @import "Pages/shifts";
+@import "Pages/common";
 @import "DragNDrop/dragNdrop";
